# fbperf

./: .gitignore  README.md  TODO.md  buildcdf.py  csvhelp.py  lib.py
confidence-intervals/: README.md  confidence-interval-test.py  mean-ci-test.py  median-diff-ci-test.py
degradation/: make.sh  proc.py
filed/: README.md  minimum-samples-old-make.sh  plot-rtt-hdr.py
golang/: .gitignore  install.sh
minimum-samples/: .gitignore  make.sh  plot.py
minsamples/: README.md  make.sh  plot.py
ns3-tcp/: make.py  make.sh  plot.py
opportunity/: README.md  csvhelp.py  make.sh  plot-hdr.py  plot-rtt.py  plot.py  proc.py
perfagg/: Cargo.toml  rustfmt.toml
perfagg/src/: aggregation.rs  inout.rs  main.rs  timeseries.rs
rust/: .gitignore  Cargo.toml  TODO.md  clippy.toml  rust.code-workspace
rust/filed/: filed-db.rs  filed-degradation.rs  filed-opportunity.rs  plot-diff-ci-cdfs.py
rust/helpers/: fbperf.py  get-valid-traffic.sh  headers.py  make-relationship-tables.py  make-temporal-table.py  make-test-csv.py  make-tex-table.py  metro-list.txt  plot-diff-ci-cdfs.py  plot-metric-diff-ci-hotnets.py  plot-metric-diff-ci.py  plot-relationship-perf.py  run-all-tests.sh  sort-path-summaries.sh  split-csv-per-metro.sh
rust/src/: aggregation.rs  cdf.rs  inout.rs  lib.rs  perfdb.rs  performance.rs  timeseries.rs
rust/src/aggregation/: inout.rs  timeseries.rs
rust/src/performance/: aggregators.rs  db.rs  pathperf.rs  perfstats.rs  summarizers.rs
rust/src/performance/db/: error.rs
rust/src/performance/summarizers/: degradation.rs  opportunity.rs  relationships.rs
(+156 files in other folders)
