[package]
name = "perfagg"
version = "0.1.0"
authors = ["Italo Cunha <cunha@dcc.ufmg.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = ">=1"
ipnet = { version = ">=2", features = ["serde"] }
serde = { version = ">=1", features = ["derive"] }
structopt = ">= 0.2"
treebitmap = ">= 0.4"