[package]
name = "fbperf"
version = "0.1.0"
authors = ["Italo Cunha <cunha@dcc.ufmg.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 3

[dependencies]
csv = ">=1"
env_logger = ">=0.6"
flate2 = { version = ">=1", features = ["tokio"] }
ipnet = { version = ">=2", features = ["serde"] }
log = ">=0.4"
num_enum = ">=0.4"
serde = { version = ">=1", features = ["derive"] }
structopt = ">= 0.2"
treebitmap = ">= 0.4"
